<resources>
    <string name="app_name">FinTrack</string>
    <string name="register_new_account">Register new account</string>
    <string name="email">Email</string>
    <string name="email_example_com">email@example.com</string>
    <string name="password">Password</string>string>
    <string name="first">First</string>string>
    <string name="first_name">First name</string>
    <string name="last">Last</string>
    <string name="last_name">Last name</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="new_to_fintrack">New to FinTrack?</string>
    <string name="register_for_free">Register for free!</string>
    <string name="landing_fragment">Landing fragment</string>
    <string name="settings_fragment">Settings fragment</string>
    <string name="overview">Overview</string>
    <string name="settings">Settings</string>
    <string name="fab">FAB</string>
    <string name="login">Login</string>
    <string name="add_entry">Add Entry</string>
    <string name="example_amount">$1000.000</string>
    <string name="yearly">Yearly</string>
    <string name="monthly">Monthly</string>

    <string-array name="month_array">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>

    <string-array name="period_array">
        <item>Yearly</item>
        <item>Monthly</item>
    </string-array>

    <string-array name="budget_array">
        <item>Household Budget</item>
        <item>Personal Budget</item>
        <item>+ New Budget</item>
    </string-array>

    <!-- Add in flower names  -->
    <string-array name="flower_array">
        <item>Lily</item>
        <item>Poppy</item>
        <item>Sunflower</item>
        <item>Freesia</item>
        <item>Daisy</item>
        <item>Rose</item>
        <item>Daffodil</item>
        <item>Lavender</item>
        <item>Peony</item>
        <item>Lilac</item>
        <item>Dahlia</item>
        <item>Tulip</item>
        <item>Dandelion</item>
    </string-array>

    <string-array name="categories_array">
        <item>Misc</item>
        <item>Entertainment</item>
        <item>House</item>
        <item>Food</item>
        <item>Lifestyle</item>
        <item>Transportation</item>
        <item>Utilities</item>
        <item>Insurance</item>
        <item>Medical</item>
        <item>Savings</item>
        <item>Personal</item>
    </string-array>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="bill">Bill</string>
    <string name="item">Item</string>
    <string name="category">Category</string>
    <string name="item_placeholder">SFU Tuition</string>
    <string name="price">Price</string>
    <string name="price_placeholder">10000</string>
    <string name="date_picker">MM/DD/YYYY</string>
    <string name="old_password">Old password</string>
    <string name="new_password">New password</string>
    <string name="update">Update</string>
    <string name="add_budget">Add budget</string>
    <string name="create">Create</string>
    <string name="name">Name</string>
    <string name="amount">Amount</string>
    <string name="budget_period">Budget period</string>
    <string name="create_account"><u>Create your account</u></string>
    <string name="list_view">List View</string>
    <string name="graph_view">Graph View</string>
    <string name="welcome_user">Welcome %1$s</string>
    <string name="starting_budget">Starting Budget</string>
</resources>