<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AddEntryActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/montserrat_medium"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/add_entry"/>



    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/income_expense_buttons"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButtonToggleGroup
                android:id="@+id/toggle_button_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:checkedButton="@id/income_button"
                app:singleSelection="true">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/income_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:insetLeft="5dp"
                    android:insetRight="5dp"
                    android:text="@string/income"
                    android:textColor="@color/hintColor" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/expense_button"
                    style="?attr/materialButtonOutlinedStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:insetLeft="5dp"
                    android:insetRight="5dp"
                    android:text="@string/expense"
                    android:textColor="@color/hintColor" />

            </com.google.android.material.button.MaterialButtonToggleGroup>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_picker"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/date_picker"
            android:textColorHint="@color/hintColor"
            app:boxStrokeColor="@color/boxStrokeColor"
            app:hintTextColor="@color/boxStrokeColor"
            android:drawableEnd="@drawable/ic_baseline_calendar24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textColorHint="@color/hintColor"
                android:focusable="false"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/category"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/category"
            android:textColorHint="@color/hintColor"
            app:boxStrokeColor="@color/boxStrokeColor"
            app:hintTextColor="@color/boxStrokeColor"
            app:placeholderText="@string/bill"
            android:focusable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/calendar_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textColorHint="@color/hintColor"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/billItem"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/item"
            android:textColorHint="@color/hintColor"
            app:boxStrokeColor="@color/boxStrokeColor"
            app:hintTextColor="@color/boxStrokeColor"
            app:placeholderText="@string/item_placeholder"
            android:focusable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textColorHint="@color/hintColor"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/price"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/price"
            android:textColorHint="@color/hintColor"
            app:boxStrokeColor="@color/boxStrokeColor"
            app:hintTextColor="@color/boxStrokeColor"
            app:placeholderText="@string/price_placeholder"
            android:focusable="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:textColorHint="@color/hintColor"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:layout_gravity="center"
        android:id="@+id/button_add_entry"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/add_entry"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</LinearLayout>