<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AddBudgetActivity">

    <TextView
        android:id="@+id/add_budget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="84dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/add_budget"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="339dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_budget_text">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/budget_name_textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:hint="@string/name"
            android:textColorHint="@color/hintColor"
            app:boxStrokeColor="@color/boxStrokeColor"
            app:hintTextColor="@color/boxStrokeColor">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/budget_name_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:inputType="textPersonName"
                android:textColorHint="@color/hintColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/starting_budget_textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:hint="Starting Budget"
            android:textColorHint="@color/hintColor"
            app:boxStrokeColor="@color/boxStrokeColor"
            app:hintTextColor="@color/boxStrokeColor"
            app:placeholderText="@string/example_amount">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/starting_budget_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/poppins_light"
                android:inputType="numberDecimal"
                android:textColorHint="@color/hintColor" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/budget_period_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="Budget Period" />

        <Spinner
            android:id="@+id/spinnerPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="4dp"
            android:layout_marginBottom="16dp"
            android:tooltipText="Select Period" />

    </LinearLayout>

    <Button
        android:id="@+id/button_create"
        android:layout_width="339dp"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/poppins_light"
        android:text="@string/create"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>